Add a text box above the keys

--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,9 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
+      <input type="text" class="display" readonly>
+
+      </input>
       <div class="grid-container" id="keyGrid">
         <!-- TODO -->
       </div>
