--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
-      <input type="text" class="display" readonly>
+      <input type="text" class="display" id="displayArea">
 
       </input>
       <div class="grid-container" id="keyGrid">
