--- a/wasm/frontend/index.html
+++ b/wasm/frontend/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Calculator</title>
 
-        <script type="module" src="main.js" defer></script>
+        <script type="module" src="./bootstrap.js" defer></script>
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
