--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Calculator</title>
 
         <script type="module" src="./bootstrap.js" defer></script>
-        <link rel="stylesheet" href="./main.css">
+        <!-- <link rel="stylesheet" href="./main.css"> -->
     </head>
     <!-- <style> -->
     <!--   .grid-container { -->
